--- a/src/Ency.Server/Views/Shared/_Layout.cshtml
+++ b/src/Ency.Server/Views/Shared/_Layout.cshtml
@@ -19,12 +19,13 @@
             <div style="width: 68px" class="flex-initial bg-white ">
                 @await Html.PartialAsync("_Nav")
             </div>
-            <main class="relative w-full flex flex-auto px-3 py-3 overflow-y-auto">
+            <main class="relative w-full flex flex-auto flex-col px-3 py-3 overflow-y-auto">
                 @RenderBody()
             </main>
         </div>
     </div>
 
+    <script defer src="https://unpkg.com/alpinejs@3.10.5/dist/cdn.min.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <style>
