--- a/src/Ency.Server/Views/Shared/_Layout.cshtml
+++ b/src/Ency.Server/Views/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
     <title>@ViewData["Title"] - EncyBase</title>
     <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
 </head>
-<body style="background-color: #f9f8f8;" class="box-border font-sans text-sm overflow-y-hidden">
+<body style="background-color: #fff;" class="box-border font-sans text-sm overflow-y-hidden">
 
     @*main*@
     <div class="flex flex-col h-screen border-transparent" aria-label="root">
