--- a/src/Ency.Server/Views/Dashboard/Index.cshtml
+++ b/src/Ency.Server/Views/Dashboard/Index.cshtml
@@ -2,6 +2,49 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
+<div>Dashboard</div>
+
+@* data grid *@
+<div role="datagrid" aria-label="data-grid" x-data="datagrid">
+    @* command bar *@
+    <div class="flex gap-2 border-t border-b items-center p-2">
+        <div>
+            <input class="form-input" type="text" placeholder="Quick Find">
+        </div>
+        <div>
+            <button class="font-semibold text-xs">New Products</button>
+        </div>
+        <div>
+            <button class="font-semibold text-xs">Actions</button>
+        </div>
+        <div>
+            <button class="font-semibold text-xs">Reports</button>
+        </div>
+    </div>
+    <table>
+        <thead>
+            <tr class="bg-social-600 p-2">
+                <th class="text-left">Product Name</th>
+                <th class="text-left">Supplier</th>
+                <th class="text-left">Category</th>
+                <th class="text-left">Unit Price</th>
+                <th class="text-left">Units in Stock</th>
+            </tr>
+        </thead>
+        <tbody>
+
+        </tbody>
+    </table>
 </div>
+
+@section Scripts{
+<script>
+    document.addEventListener("alpine:init", () => {
+        Alpine.data("datagrid", () => (
+            {
+
+            }
+        ))
+    })
+</script>
+}
